--- a/package.json
+++ b/package.json
@@ -9,34 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0",
-    "react-markdown": "^8.0.7",
-    "supports-color": "8.1.1",
     "@tailwindui/react": "^0.1.1",
     "@types/node": "^20.6.0",
+    "@vercel/analytics": "^1.1.2",
     "classnames": "^2.3.2",
-    "gray-matter": "^4.0.3"
+    "gray-matter": "^4.0.3",
+    "next": "14.1.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-markdown": "^8.0.7",
+    "supports-color": "8.1.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react-dom": "^18",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/node": "^20",
     "@types/react": "^18.2.22",
+    "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "autoprefixer": "^10.4.15",
     "bun-types": "latest",
     "daisyui": "^3.7.4",
     "eslint": "^8.49.0",
+    "eslint-config-next": "14.1.0",
     "lint-staged": "^14.0.1",
     "postcss": "^8.4.29",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2",
-    "eslint-config-next": "14.1.0"
+    "typescript": "^5.2.2"
   },
   "postcss": {
     "plugins": [
@@ -45,4 +46,3 @@
     ]
   }
 }
-
