--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.1.4",
     "@tailwindui/react": "^0.1.1",
+    "@types/mdx": "^2.0.11",
     "@vercel/analytics": "^1.1.2",
     "classnames": "^2.3.2",
-    "gray-matter": "^4.0.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-markdown": "^8.0.7",
+    "remark-frontmatter": "^5.0.0",
+    "remark-mdx-frontmatter": "^4.0.0",
     "supports-color": "8.1.1"
   },
   "devDependencies": {
@@ -31,6 +35,7 @@
     "daisyui": "^3.7.4",
     "eslint": "^8.49.0",
     "eslint-config-next": "14.1.0",
+    "gray-matter": "^4.0.3",
     "lint-staged": "^14.0.1",
     "postcss": "^8.4.29",
     "prettier": "^3.0.3",
@@ -43,6 +48,8 @@
       "tailwindcss",
       "autoprefixer"
     ]
+  },
+  "volta": {
+    "node": "20.11.1"
   }
 }
-
